--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -9,11 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@langnang/vue-audio-player": "^0.1.9",
     "@tinymce/tinymce-vue": "^3.2.8",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "html-to-docx": "^1.2.4",
     "vue": "^2.6.11",
+    "vue-audio-better": "^3.0.1",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
